# Telegram-Bridge-to-Coding-CLI

./: .env.example  Cargo.toml
src/: bot.rs  config.rs  executor.rs  main.rs  session.rs
src/handler/: mod.rs  prompt.rs  slash.rs
telegram_bridge/: .env.example  .gitignore  Cargo.toml  DEVELOPER.md  Dockerfile  Output_format.md  README.md  plan_v2.md
telegram_bridge/src/: bot.rs  config.rs  executor.rs  filter.rs  json_parser.rs  main.rs  markdown.rs  markdownv2.rs  session.rs  stream.rs  ui.rs
telegram_bridge/src/cli/: mod.rs
telegram_bridge/src/cli/claude/: mod.rs
telegram_bridge/src/cli/codex/: mod.rs
telegram_bridge/src/cli/opencode/: mod.rs
telegram_bridge/src/handler/: callback.rs  mod.rs  prompt.rs  slash.rs
