[package]
name = "telegram_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = "0.4"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "hickory-dns"] }
regex = "1"
